Fix gantt misalignment in Firefox

--- a/styles/web/common/gantt.less
+++ b/styles/web/common/gantt.less
@@ -156,6 +156,10 @@
     height: 2.3em;
 }
 
+.k-gantt .k-gantt-tasks td:after {
+    content: "\a0";
+}
+
 .k-gantt-timeline
 {
     background: transparent;
